--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -40,6 +40,7 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y jq
 
+      # ==== 1) FILTERS/KEYMAN の解析（出力を二重化：GITHUB_OUTPUT + .github/parsed_env） ====
       - name: Parse FILTERS & KEYMAN
         id: parse
         env:
@@ -47,39 +48,42 @@ jobs:
           KEYMAN:  ${{ inputs.KEYMAN }}
         run: |
           set -euo pipefail
+          mkdir -p .github
+          OUT_FILE=".github/parsed_env"; : > "$OUT_FILE"
+
           parse_kvlist () {
             local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
             for kv in "${pairs[@]}"; do
-              kv="$(echo "$kv" | xargs)"
+              kv="$(echo "$kv" | tr -d '\r' | xargs)"
               [ -z "$kv" ] && continue
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
-                v="$(echo "${kv#*=}" | xargs)"
-                echo "$prefix$k=$v" >> "$GITHUB_OUTPUT"
+                v="$(echo "${kv#*=}" | tr -d '\r' | xargs)"
+                echo "${prefix}${k}=${v}" >> "$GITHUB_OUTPUT"
+                echo "export ${prefix}${k}=\"${v}\"" >> "$OUT_FILE"
               fi
             done
           }
-          # filters defaults
-          echo "F_REQUIRE_ODDS=false" >> "$GITHUB_OUTPUT"
-          echo "F_MIN_EV=0"          >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_BANDS="       >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_MIN=0"        >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_MAX=0"        >> "$GITHUB_OUTPUT"
-          echo "F_EXCLUDE_FIRST1=false" >> "$GITHUB_OUTPUT"
-          echo "F_ONLY_FIRST1=false"    >> "$GITHUB_OUTPUT"
 
-          # keyman defaults（★ buy 系もここで定義）
-          echo "K_ENABLE=true"        >> "$GITHUB_OUTPUT"
-          echo "K_THR=0.7"            >> "$GITHUB_OUTPUT"
-          echo "K_BOOST=0.15"         >> "$GITHUB_OUTPUT"
-          echo "K_AGGR=0.0"           >> "$GITHUB_OUTPUT"
-          echo "K_BUY_IN_TOP3=false"  >> "$GITHUB_OUTPUT"
-          echo "K_BUY_THR=0.7"        >> "$GITHUB_OUTPUT"
+          # defaults
+          for line in \
+            "F_REQUIRE_ODDS=false" "F_MIN_EV=0" "F_ODDS_BANDS=" "F_ODDS_MIN=0" "F_ODDS_MAX=0" \
+            "F_EXCLUDE_FIRST1=false" "F_ONLY_FIRST1=false" "F_BUY_IN_TOP3=false" "F_BUY_THR=0.7" \
+            "K_ENABLE=true" "K_THR=0.7" "K_BOOST=0.15" "K_AGGR=0.0"
+          do
+            echo "$line" >> "$GITHUB_OUTPUT"
+            echo "export ${line%%=*}=\"${line#*=}\"" >> "$OUT_FILE"
+          done
 
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
 
+          echo "::group::[debug] parsed env"
+          cat "$OUT_FILE"
+          echo "::endgroup::"
+
+      # ==== 2) PID 正規化 ====
       - name: Normalize PID (all/空→01..24, カンマ区切り整形)
         id: pidnorm
         env:
@@ -96,15 +100,15 @@ jobs:
             OUT=""
             IFS=',' read -r -a arr <<< "$PID_NORM"
             for p in "${arr[@]}"; do
-              p="$(echo "$p" | xargs)" ; [ -z "$p" ] && continue
-              printf -v two "%02d" "$p" ; OUT="${OUT}${two},"
+              p="$(echo "$p" | xargs)"; [ -z "$p" ] && continue
+              printf -v two "%02d" "$p"; OUT="${OUT}${two},"
             done
             PID_EXP="${OUT%,}"
           fi
           echo "PID_EXP=$PID_EXP" | tee -a "$GITHUB_OUTPUT"
           echo "[pidnorm] => $PID_EXP"
 
-      # 1) Pass1 (keyman only)
+      # ==== 3) Pass1 ====
       - name: Run Pass1 (keyman only)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -124,10 +128,10 @@ jobs:
             --predict-only \
             --outdir "$OUTDIR"
 
-      # 2) TENKAI (per PID)
+      # ==== 4) ML (TENKAI) ====
       - name: Run TENKAI prediction
         env:
-          DATE:   ${{ inputs.DATE }}
+          DATE: ${{ inputs.DATE }}
           PID_EXP: ${{ steps.pidnorm.outputs.PID_EXP }}
         run: |
           set -euo pipefail
@@ -144,7 +148,7 @@ jobs:
         run: |
           find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 4 -type f -name '*.csv' | sort || true
 
-      # 3) Pass2 (SimS + ML)
+      # ==== 5) Pass2（.github/parsed_env を必ず取り込む） ====
       - name: Run Pass2 (SimS integrated with ML)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -153,7 +157,6 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -161,28 +164,32 @@ jobs:
           F_ODDS_MAX:       ${{ steps.parse.outputs.F_ODDS_MAX }}
           F_EXCLUDE_FIRST1: ${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
-          # keyman
-          K_ENABLE:         ${{ steps.parse.outputs.K_ENABLE }}
-          K_THR:            ${{ steps.parse.outputs.K_THR }}
-          K_BOOST:          ${{ steps.parse.outputs.K_BOOST }}
-          K_AGGR:           ${{ steps.parse.outputs.K_AGGR }}
-          K_BUY_IN_TOP3:    ${{ steps.parse.outputs.K_BUY_IN_TOP3 }}
-          K_BUY_THR:        ${{ steps.parse.outputs.K_BUY_THR }}
+          F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
+          F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
+          K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
+          K_THR:    ${{ steps.parse.outputs.K_THR }}
+          K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
+          K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
+          [ -f .github/parsed_env ] && source .github/parsed_env
+
           echo "[pass2] MODE=$MODE DATE=$DATE PID=$PID"
+          echo "[debug] KEYMAN: enable=$K_ENABLE thr=$K_THR boost=$K_BOOST aggr=$K_AGGR"
+          echo "[debug] FILTERS: require_odds=$F_REQUIRE_ODDS min_ev=$F_MIN_EV odds_bands='$F_ODDS_BANDS'"
+
           if [[ "${K_ENABLE,,}" == "false" ]]; then
             K_THR=9.9; K_BOOST=0; K_AGGR=0
           fi
+
           ARGS_COMMON="--base public --dates $DATE --pids $PID \
             --sims $SIMS --topn $TOPN \
             --keyman-threshold $K_THR --keyman-boost $K_BOOST --keyman-aggr $K_AGGR \
             --ml-root TENKAI/predictions/v1 \
             --outdir $OUTDIR"
+
           [[ "${F_EXCLUDE_FIRST1,,}" == "true" ]] && ARGS_COMMON="$ARGS_COMMON --exclude-first1"
-          [[ "${F_ONLY_FIRST1,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --only-first1"
-          # ★ KEYMAN の buy 系は K_* を参照
-          [[ "${K_BUY_IN_TOP3,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $K_BUY_THR"
+          [[ "${F_ONLY_FIRST1,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --only_first1"
 
           if [[ "$MODE" == "predict" ]]; then
             python scripts/sims/sims_integrated.py $ARGS_COMMON --predict-only
@@ -196,7 +203,7 @@ jobs:
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON --odds-base public/odds/v1 $ARGS_FILTER
           fi
 
-      # 4) 集計：常に実行、overall.json を毎回上書き（CSV無い場合はゼロ埋め）
+      # ==== 6) 集計：毎回上書き ====
       - name: Aggregate & write overall.json (overwrite always)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -206,7 +213,6 @@ jobs:
           TOPN:  ${{ inputs.TOPN }}
           PID:   ${{ steps.pidnorm.outputs.PID_EXP }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -214,17 +220,15 @@ jobs:
           F_ODDS_MAX:       ${{ steps.parse.outputs.F_ODDS_MAX }}
           F_EXCLUDE_FIRST1: ${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
-          # keyman
-          K_ENABLE:         ${{ steps.parse.outputs.K_ENABLE }}
-          K_THR:            ${{ steps.parse.outputs.K_THR }}
-          K_BOOST:          ${{ steps.parse.outputs.K_BOOST }}
-          K_AGGR:           ${{ steps.parse.outputs.K_AGGR }}
-          K_BUY_IN_TOP3:    ${{ steps.parse.outputs.K_BUY_IN_TOP3 }}
-          K_BUY_THR:        ${{ steps.parse.outputs.K_BUY_THR }}
+          F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
+          F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
+          K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
+          K_THR:    ${{ steps.parse.outputs.K_THR }}
+          K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
+          K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
           CSV="$OUTDIR/pass2/per_race_results.csv"
-
           if [ -f "$CSV" ]; then
             RACES=$(awk 'END{print NR-1}' "$CSV")
             BETS=$(awk -F, 'NR>1{sum+=$4}END{print sum+0}' "$CSV")
@@ -248,23 +252,24 @@ jobs:
           fi
 
           tf(){ v="${1:-false}"; v="$(echo "$v" | tr '[:upper:]' '[:lower:]')"; [ "$v" = "true" ] && echo true || echo false; }
+          REQ_ODDS=$(tf "$F_REQUIRE_ODDS")
+          EXC1=$(tf "$F_EXCLUDE_FIRST1")
+          ONLY1=$(tf "$F_ONLY_FIRST1")
+          BUY3=$(tf "$F_BUY_IN_TOP3")
+          KM_EN=$(tf "$K_ENABLE")
 
           mkdir -p "$OUTDIR/pass2"
-          rm -f "$OUTDIR/pass2/overall.json"
-
           jq -n \
             --arg date "$DATE" --arg mode "$MODE" --arg pid "$PID" \
             --argjson unit $UNIT --argjson sims $SIMS --argjson topn $TOPN \
-            --argjson races $RACES --argjson bets $BETS --argjson stake $STAKE \
-            --argjson hits $HITS --argjson hit_rate $HIT_RATE --argjson payout $PAYOUT --argjson roi $ROI \
-            --argjson f_require_odds $(tf "$F_REQUIRE_ODDS") \
-            --arg f_odds_bands "${F_ODDS_BANDS:-}" \
+            --argjson races $RACES --argjson bets $BETS \
+            --argjson stake $STAKE --argjson hits $HITS \
+            --argjson hit_rate $HIT_RATE --argjson payout $PAYOUT --argjson roi $ROI \
+            --argjson f_require_odds $REQ_ODDS --arg f_odds_bands "${F_ODDS_BANDS:-}" \
             --argjson f_min_ev ${F_MIN_EV:-0} --argjson f_odds_min ${F_ODDS_MIN:-0} --argjson f_odds_max ${F_ODDS_MAX:-0} \
-            --argjson f_exclude_first1 $(tf "$F_EXCLUDE_FIRST1") \
-            --argjson f_only_first1 $(tf "$F_ONLY_FIRST1") \
-            --argjson k_enable $(tf "$K_ENABLE") \
-            --argjson k_thr ${K_THR:-0} --argjson k_boost ${K_BOOST:-0} --argjson k_aggr ${K_AGGR:-0} \
-            --argjson k_buy_in_top3 $(tf "$K_BUY_IN_TOP3") --argjson k_buy_thr ${K_BUY_THR:-0} \
+            --argjson f_exclude_first1 $EXC1 --argjson f_only_first1 $ONLY1 \
+            --argjson f_buy_in_top3 $BUY3 --argjson f_buy_thr ${F_BUY_THR:-0} \
+            --argjson k_enable $KM_EN --argjson k_thr ${K_THR:-0} --argjson k_boost ${K_BOOST:-0} --argjson k_aggr ${K_AGGR:-0} \
             '{
               date: $date, mode: $mode, pid: $pid,
               races: $races, bets_total: $bets, unit: $unit,
@@ -278,18 +283,17 @@ jobs:
                   odds_bands: $f_odds_bands,
                   odds_min: $f_odds_min, odds_max: $f_odds_max,
                   exclude_first1: $f_exclude_first1,
-                  only_first1: $f_only_first1
+                  only_first1: $f_only_first1,
+                  buy_in_top3: $f_buy_in_top3,
+                  buy_thr: $f_buy_thr
                 },
                 keyman: {
                   enable: $k_enable, threshold: $k_thr,
-                  boost: $k_boost, aggr: $k_aggr,
-                  buy_in_top3: $k_buy_in_top3, buy_thr: $k_buy_thr
+                  boost: $k_boost, aggr: $k_aggr
                 }
               }
             }' > "$OUTDIR/pass2/overall.json"
-
-          echo "----- overall.json -----"
-          cat "$OUTDIR/pass2/overall.json"
+          echo "[overall] wrote $OUTDIR/pass2/overall.json"
 
       - name: Commit results into repo
         if: always()
@@ -297,7 +301,7 @@ jobs:
           set -e
           git config user.name  github-actions
           git config user.email github-actions@github.com
-          git add -A
+          git add ${{ inputs.OUTDIR }}/pass1 ${{ inputs.OUTDIR }}/pass2 TENKAI/predictions/v1/${{ inputs.DATE }} || true
           git commit -m "sims_integrated: ${{ inputs.MODE }} DATE=${{ inputs.DATE }} PID=${{ inputs.PID }} (overall overwrite)" || echo "nothing to commit"
           git push || true
 
