--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -47,41 +47,37 @@ jobs:
           KEYMAN:  ${{ inputs.KEYMAN }}
         run: |
           set -euo pipefail
-          mkdir -p .github
-          : > .github/parsed_env
-
           parse_kvlist () {
             local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
             for kv in "${pairs[@]}"; do
-              kv="$(echo "$kv" | tr -d '\r' | xargs)"
+              kv="$(echo "$kv" | xargs)"
               [ -z "$kv" ] && continue
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
-                v="$(echo "${kv#*=}" | tr -d '\r' | xargs)"
-                # outputs
+                v="$(echo "${kv#*=}" | xargs)"
                 echo "$prefix$k=$v" >> "$GITHUB_OUTPUT"
-                # env file for later `source`
-                printf '%s=%s\n' "$prefix$k" "$v" >> .github/parsed_env
               fi
             done
           }
-
-          # defaults -> both GITHUB_OUTPUT and parsed_env
-          for line in \
-            "F_REQUIRE_ODDS=false" "F_MIN_EV=0" "F_ODDS_BANDS=" "F_ODDS_MIN=0" "F_ODDS_MAX=0" \
-            "F_EXCLUDE_FIRST1=false" "F_ONLY_FIRST1=false" "F_BUY_IN_TOP3=false" "F_BUY_THR=0.7" \
-            "K_ENABLE=true" "K_THR=0.7" "K_BOOST=0.15" "K_AGGR=0.0"
-          do
-            echo "$line" >> "$GITHUB_OUTPUT"
-            echo "$line" >> .github/parsed_env
-          done
-
+          # defaults (出力名は固定)
+          {
+            echo "F_REQUIRE_ODDS=false"
+            echo "F_MIN_EV=0"
+            echo "F_ODDS_BANDS="
+            echo "F_ODDS_MIN=0"
+            echo "F_ODDS_MAX=0"
+            echo "F_EXCLUDE_FIRST1=false"
+            echo "F_ONLY_FIRST1=false"
+            echo "F_BUY_IN_TOP3=false"
+            echo "F_BUY_THR=0.7"
+            echo "K_ENABLE=true"
+            echo "K_THR=0.7"
+            echo "K_BOOST=0.15"
+            echo "K_AGGR=0.0"
+          } >> "$GITHUB_OUTPUT"
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
-
-          echo "[parse] wrote .github/parsed_env:"
-          sed -n '1,200p' .github/parsed_env || true
 
       - name: Normalize PID (all/空→01..24, カンマ区切り整形)
         id: pidnorm
@@ -156,7 +152,7 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          # fallbacks from outputs (source でも入らなかった時用)
+          # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -166,49 +162,25 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
+          # keyman
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          # 解析済み値を必ず取り込む
-          [ -f .github/parsed_env ] && source .github/parsed_env
-
-          # フォールバック（空なら outputs 値を採用）
-          : "${F_REQUIRE_ODDS:=${{ steps.parse.outputs.F_REQUIRE_ODDS }}}"
-          : "${F_MIN_EV:=${{ steps.parse.outputs.F_MIN_EV }}}"
-          : "${F_ODDS_BANDS:=${{ steps.parse.outputs.F_ODDS_BANDS }}}"
-          : "${F_ODDS_MIN:=${{ steps.parse.outputs.F_ODDS_MIN }}}"
-          : "${F_ODDS_MAX:=${{ steps.parse.outputs.F_ODDS_MAX }}}"
-          : "${F_EXCLUDE_FIRST1:=${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}}"
-          : "${F_ONLY_FIRST1:=${{ steps.parse.outputs.F_ONLY_FIRST1 }}}"
-          : "${F_BUY_IN_TOP3:=${{ steps.parse.outputs.F_BUY_IN_TOP3 }}}"
-          : "${F_BUY_THR:=${{ steps.parse.outputs.F_BUY_THR }}}"
-          : "${K_ENABLE:=${{ steps.parse.outputs.K_ENABLE }}}"
-          : "${K_THR:=${{ steps.parse.outputs.K_THR }}}"
-          : "${K_BOOST:=${{ steps.parse.outputs.K_BOOST }}}"
-          : "${K_AGGR:=${{ steps.parse.outputs.K_AGGR }}}"
-
           echo "[pass2] MODE=$MODE DATE=$DATE PID=$PID"
-          echo "[debug] KEYMAN => enable=$K_ENABLE, thr=$K_THR, boost=$K_BOOST, aggr=$K_AGGR"
-          echo "[debug] FILTERS => require_odds=$F_REQUIRE_ODDS, min_ev=$F_MIN_EV, bands='$F_ODDS_BANDS', min=$F_ODDS_MIN, max=$F_ODDS_MAX, excl1=$F_EXCLUDE_FIRST1, only1=$F_ONLY_FIRST1, buy_top3=$F_BUY_IN_TOP3, buy_thr=$F_BUY_THR"
-
-          # 無効化指定なら数値も0化
           if [[ "${K_ENABLE,,}" == "false" ]]; then
             K_THR=9.9; K_BOOST=0; K_AGGR=0
           fi
-
           ARGS_COMMON="--base public --dates $DATE --pids $PID \
             --sims $SIMS --topn $TOPN \
             --keyman-threshold $K_THR --keyman-boost $K_BOOST --keyman-aggr $K_AGGR \
             --ml-root TENKAI/predictions/v1 \
             --outdir $OUTDIR"
-
           [[ "${F_EXCLUDE_FIRST1,,}" == "true" ]] && ARGS_COMMON="$ARGS_COMMON --exclude-first1"
           [[ "${F_ONLY_FIRST1,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --only-first1"
           [[ "${F_BUY_IN_TOP3,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $F_BUY_THR"
-
           if [[ "$MODE" == "predict" ]]; then
             python scripts/sims/sims_integrated.py $ARGS_COMMON --predict-only
           else
@@ -218,11 +190,10 @@ jobs:
             [[ -n "${F_ODDS_MAX}"   && "$F_ODDS_MAX" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --odds-max $F_ODDS_MAX"
             [[ "${F_REQUIRE_ODDS,,}" == "true" ]] && ARGS_FILTER="$ARGS_FILTER --require-odds"
             [[ -n "${F_MIN_EV}" && "$F_MIN_EV" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --min-ev $F_MIN_EV"
-            # bands のクォート保持のため eval
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON --odds-base public/odds/v1 $ARGS_FILTER
           fi
 
-      # 4) 集計：常に実行し、overall.json を毎回上書き（CSVが無い場合はゼロ埋め）
+      # 4) 集計：毎回 overall.json を上書き
       - name: Aggregate & write overall.json (overwrite always)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -252,84 +223,72 @@ jobs:
           CSV="$OUTDIR/pass2/per_race_results.csv"
           mkdir -p "$OUTDIR/pass2"
 
-          python - << 'PY'
-import csv, json, os
-csv_path = os.environ.get("CSV")
-unit = int(os.environ.get("UNIT","100"))
-date = os.environ.get("DATE","")
-mode = os.environ.get("MODE","")
-pid  = os.environ.get("PID","")
+          RACES=0; BETS=0; STAKE=0; PAYOUT=0; HITS=0
+          if [ -f "$CSV" ]; then
+            RACES=$(awk 'END{print (NR>0?NR-1:0)}' "$CSV")
+            BETS=$(awk -F, 'NR>1{sum+=$4+0}END{print sum+0}' "$CSV")
+            HITS=$(awk -F, 'NR>1{sum+=$5+0}END{print sum+0}' "$CSV")
+            PAYOUT=$(awk -F, 'NR>1{sum+=$6+0}END{print sum+0}' "$CSV")
+            STAKE=$(( BETS * UNIT ))
+          else
+            echo "[overall] per_race_results.csv not found -> zero summary"
+          fi
 
-def tf(v): return str(v).strip().lower() == "true"
+          if [ "${RACES:-0}" -gt 0 ]; then
+            HIT_RATE=$(awk -v h="$HITS" -v r="$RACES" 'BEGIN{printf "%.12f", (r==0?0:h/r)}')
+          else
+            HIT_RATE=0
+          fi
+          if [ "${STAKE:-0}" -gt 0 ]; then
+            ROI=$(awk -v p="$PAYOUT" -v s="$STAKE" 'BEGIN{printf "%.12f", (s==0?0:(p-s)/s)}')
+          else
+            ROI=0
+          fi
 
-opts = {
-  "sims": int(os.environ.get("SIMS","0")),
-  "topn": int(os.environ.get("TOPN","0")),
-  "filters": {
-    "require_odds": tf(os.environ.get("F_REQUIRE_ODDS","false")),
-    "min_ev": float(os.environ.get("F_MIN_EV","0") or 0),
-    "odds_bands": os.environ.get("F_ODDS_BANDS","") or "",
-    "odds_min": float(os.environ.get("F_ODDS_MIN","0") or 0),
-    "odds_max": float(os.environ.get("F_ODDS_MAX","0") or 0),
-    "exclude_first1": tf(os.environ.get("F_EXCLUDE_FIRST1","false")),
-    "only_first1": tf(os.environ.get("F_ONLY_FIRST1","false")),
-    "buy_in_top3": tf(os.environ.get("F_BUY_IN_TOP3","false")),
-    "buy_thr": float(os.environ.get("F_BUY_THR","0") or 0),
-  },
-  "keyman": {
-    "enable": tf(os.environ.get("K_ENABLE","true")),
-    "threshold": float(os.environ.get("K_THR","0.7") or 0.7),
-    "boost": float(os.environ.get("K_BOOST","0.15") or 0.15),
-    "aggr": float(os.environ.get("K_AGGR","0") or 0.0),
-    "buy_in_top3": tf(os.environ.get("F_BUY_IN_TOP3","false")),
-    "buy_thr": float(os.environ.get("F_BUY_THR","0") or 0),
-  }
-}
+          tf(){ v="${1:-false}"; v="$(echo "$v" | tr '[:upper:]' '[:lower:]')"; [ "$v" = "true" ] && echo true || echo false; }
+          REQ_ODDS=$(tf "$F_REQUIRE_ODDS")
+          EXC1=$(tf "$F_EXCLUDE_FIRST1")
+          ONLY1=$(tf "$F_ONLY_FIRST1")
+          BUY3=$(tf "$F_BUY_IN_TOP3")
+          KM_EN=$(tf "$K_ENABLE")
 
-races=bets=hits=payout=stake=0
+          jq -n \
+            --arg date "$DATE" --arg mode "$MODE" --arg pid "$PID" \
+            --argjson unit $UNIT --argjson sims $SIMS --argjson topn $TOPN \
+            --argjson races ${RACES:-0} --argjson bets ${BETS:-0} \
+            --argjson stake ${STAKE:-0} --argjson hits ${HITS:-0} \
+            --argjson hit_rate ${HIT_RATE:-0} --argjson payout ${PAYOUT:-0} --argjson roi ${ROI:-0} \
+            --argjson f_require_odds $REQ_ODDS --arg f_odds_bands "${F_ODDS_BANDS:-}" \
+            --argjson f_min_ev ${F_MIN_EV:-0} --argjson f_odds_min ${F_ODDS_MIN:-0} --argjson f_odds_max ${F_ODDS_MAX:-0} \
+            --argjson f_exclude_first1 $EXC1 --argjson f_only_first1 $ONLY1 \
+            --argjson f_buy_in_top3 $BUY3 --argjson f_buy_thr ${F_BUY_THR:-0} \
+            --argjson k_enable $KM_EN --argjson k_thr ${K_THR:-0} --argjson k_boost ${K_BOOST:-0} --argjson k_aggr ${K_AGGR:-0} \
+            '{
+              date: $date, mode: $mode, pid: $pid,
+              races: $races, bets_total: $bets, unit: $unit,
+              stake_total: $stake, hits: $hits, hit_rate: $hit_rate,
+              payout_total: $payout, roi: $roi,
+              options: {
+                sims: $sims, topn: $topn,
+                filters: {
+                  require_odds: $f_require_odds,
+                  min_ev: $f_min_ev,
+                  odds_bands: $f_odds_bands,
+                  odds_min: $f_odds_min, odds_max: $f_odds_max,
+                  exclude_first1: $f_exclude_first1,
+                  only_first1: $f_only_first1,
+                  buy_in_top3: $f_buy_in_top3,
+                  buy_thr: $f_buy_thr
+                },
+                keyman: {
+                  enable: $k_enable, threshold: $k_thr,
+                  boost: $k_boost, aggr: $k_aggr,
+                  buy_in_top3: $f_buy_in_top3, buy_thr: $f_buy_thr
+                }
+              }
+            }' > "$OUTDIR/pass2/overall.json"
 
-def pick(row, names):
-  for n in names:
-    if n in row and str(row[n]).strip() != "":
-      return row[n]
-  return "0"
-
-if os.path.isfile(csv_path):
-  with open(csv_path, newline="", encoding="utf-8") as f:
-    rdr = csv.DictReader(f)
-    for row in rdr:
-      races += 1
-      b = int(float(pick(row, ["bets","bet_count","n_bets"])))
-      h = int(float(pick(row, ["hits","hit","n_hits"])))
-      p = int(float(pick(row, ["payout","payout_total","return"])))
-      bets   += b
-      hits   += h
-      payout += p
-  stake = unit * bets
-
-hit_rate = (hits / races) if races else 0.0
-roi = ((payout - stake) / stake) if stake else 0.0
-
-out = {
-  "date": date,
-  "mode": mode,
-  "pid": pid,
-  "races": races,
-  "bets_total": bets,
-  "unit": unit,
-  "stake_total": stake,
-  "hits": hits,
-  "hit_rate": float(f"{hit_rate:.12f}"),
-  "payout_total": payout,
-  "roi": float(f"{roi:.12f}"),
-  "options": opts,
-}
-
-out_path = os.path.join(os.environ["OUTDIR"], "pass2", "overall.json")
-with open(out_path, "w", encoding="utf-8") as w:
-  json.dump(out, w, ensure_ascii=False, indent=2)
-print("[overall] wrote", out_path)
-PY
+          echo "[overall] wrote $OUTDIR/pass2/overall.json"
 
       - name: Commit results into repo
         if: always()
