--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -47,6 +47,8 @@ jobs:
           KEYMAN:  ${{ inputs.KEYMAN }}
         run: |
           set -euo pipefail
+
+          # ★ util: kv を GITHUB_OUTPUT に吐く
           parse_kvlist () {
             local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
@@ -60,7 +62,8 @@ jobs:
               fi
             done
           }
-          # defaults (出力名は固定)
+
+          # 既定値（先に入れて、後で上書き）
           {
             echo "F_REQUIRE_ODDS=false"
             echo "F_MIN_EV=0"
@@ -71,13 +74,31 @@ jobs:
             echo "F_ONLY_FIRST1=false"
             echo "F_BUY_IN_TOP3=false"
             echo "F_BUY_THR=0.7"
+
             echo "K_ENABLE=true"
             echo "K_THR=0.7"
             echo "K_BOOST=0.15"
             echo "K_AGGR=0.0"
           } >> "$GITHUB_OUTPUT"
+
+          # ★ 入力で上書き（ここが“デフォ固定”の原因になりやすいので順序厳守）
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
+
+      # ★ 解析ログ（デバッグ用・最小変更）
+      - name: Dump parsed values
+        run: |
+          echo "K_ENABLE=${{ steps.parse.outputs.K_ENABLE }}"
+          echo "K_THR=${{ steps.parse.outputs.K_THR }}"
+          echo "K_BOOST=${{ steps.parse.outputs.K_BOOST }}"
+          echo "K_AGGR=${{ steps.parse.outputs.K_AGGR }}"
+          echo "F_REQUIRE_ODDS=${{ steps.parse.outputs.F_REQUIRE_ODDS }}"
+          echo "F_MIN_EV=${{ steps.parse.outputs.F_MIN_EV }}"
+          echo "F_ODDS_BANDS=${{ steps.parse.outputs.F_ODDS_BANDS }}"
+          echo "F_EXCLUDE_FIRST1=${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}"
+          echo "F_ONLY_FIRST1=${{ steps.parse.outputs.F_ONLY_FIRST1 }}"
+          echo "F_BUY_IN_TOP3=${{ steps.parse.outputs.F_BUY_IN_TOP3 }}"
+          echo "F_BUY_THR=${{ steps.parse.outputs.F_BUY_THR }}"
 
       - name: Normalize PID (all/空→01..24, カンマ区切り整形)
         id: pidnorm
@@ -101,7 +122,6 @@ jobs:
             PID_EXP="${OUT%,}"
           fi
           echo "PID_EXP=$PID_EXP" | tee -a "$GITHUB_OUTPUT"
-          echo "[pidnorm] => $PID_EXP"
 
       # 1) Pass1
       - name: Run Pass1 (keyman only)
@@ -113,7 +133,6 @@ jobs:
           OUTDIR: ${{ inputs.OUTDIR }}
         run: |
           set -euo pipefail
-          echo "[pass1] DATE=$DATE PID=$PID"
           python scripts/sims/sims.py \
             --base public \
             --dates "$DATE" \
@@ -131,11 +150,9 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p "TENKAI/predictions/v1/$DATE"
-          echo "[tenkai] $DATE / $PID_EXP"
           IFS=',' read -r -a PIDS <<< "$PID_EXP"
           for P in "${PIDS[@]}"; do
             P="$(echo "$P" | xargs)"; [ -z "$P" ] && continue
-            echo "  -> pid=$P"
             python TENKAI/tenkai_predict_integrated.py --date "$DATE" --pid "$P"
           done
 
@@ -169,7 +186,6 @@ jobs:
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          echo "[pass2] MODE=$MODE DATE=$DATE PID=$PID"
           if [[ "${K_ENABLE,,}" == "false" ]]; then
             K_THR=9.9; K_BOOST=0; K_AGGR=0
           fi
@@ -193,7 +209,7 @@ jobs:
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON --odds-base public/odds/v1 $ARGS_FILTER
           fi
 
-      # 4) 集計：毎回 overall.json を上書き
+      # 4) overall.json を毎回上書き（★ ヘッダ名で列特定して hit_rate の取り違えを防止）
       - name: Aggregate & write overall.json (overwrite always)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -223,12 +239,36 @@ jobs:
           CSV="$OUTDIR/pass2/per_race_results.csv"
           mkdir -p "$OUTDIR/pass2"
 
+          # デフォルト
           RACES=0; BETS=0; STAKE=0; PAYOUT=0; HITS=0
+
           if [ -f "$CSV" ]; then
-            RACES=$(awk 'END{print (NR>0?NR-1:0)}' "$CSV")
-            BETS=$(awk -F, 'NR>1{sum+=$4+0}END{print sum+0}' "$CSV")
-            HITS=$(awk -F, 'NR>1{sum+=$5+0}END{print sum+0}' "$CSV")
-            PAYOUT=$(awk -F, 'NR>1{sum+=$6+0}END{print sum+0}' "$CSV")
+            # ★ 先頭行から列番号を名前で取得（bets, hit, payout）
+            header="$(head -n1 "$CSV")"
+            IFS=',' read -r -a cols <<< "$header"
+            idx_of () { # 1-based
+              local name="$1"; local i=1
+              for c in "${cols[@]}"; do
+                c="${c%$'\r'}"; c="$(echo "$c" | xargs)"
+                if [ "$c" = "$name" ]; then echo "$i"; return 0; fi
+                i=$((i+1))
+              done
+              echo 0
+            }
+
+            CI_BETS=$(idx_of "bets")
+            CI_HIT=$(idx_of "hit")
+            CI_PAYOUT=$(idx_of "payout")
+
+            # フォールバック（古いCSV互換）
+            [ "$CI_BETS" -eq 0 ] && CI_BETS=4
+            [ "$CI_HIT" -eq 0 ] && CI_HIT=5
+            [ "$CI_PAYOUT" -eq 0 ] && CI_PAYOUT=6
+
+            RACES=$(($(wc -l < "$CSV")-1))
+            BETS=$(awk -F, -v b="$CI_BETS"   'NR>1{sum+=$b+0}END{print sum+0}' "$CSV")
+            HITS=$(awk -F, -v h="$CI_HIT"    'NR>1{sum+=$h+0}END{print sum+0}' "$CSV")
+            PAYOUT=$(awk -F, -v p="$CI_PAYOUT"'NR>1{sum+=$p+0}END{print sum+0}' "$CSV")
             STAKE=$(( BETS * UNIT ))
           else
             echo "[overall] per_race_results.csv not found -> zero summary"
