--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -3,15 +3,51 @@ name: sims_integrated
 on:
   workflow_dispatch:
     inputs:
-      DATE:   { description: "YYYYMMDD", required: true,  type: string }
-      PID:    { description: "場コード 01..24（カンマ可, all/空=全場）", required: false, default: "all", type: string }
-      MODE:   { description: "predict or eval", required: true, default: "predict", type: choice, options: [predict, eval] }
-      SIMS:   { description: "試行回数/レース", required: true, default: "600", type: string }
-      TOPN:   { description: "三連単 TOPN", required: true, default: "18", type: string }
-      UNIT:   { description: "1点あたり(円)", required: true, default: "100", type: string }
-      FILTERS: { description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19", required: false, default: "", type: string }
-      KEYMAN:  { description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", required: false, default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", type: string }
-      OUTDIR:  { description: "出力ディレクトリ", required: false, default: "scripts/sims", type: string }
+      DATE:
+        description: "YYYYMMDD"
+        required: true
+        type: string
+      PID:
+        description: "場コード 01..24（カンマ可, all/空=全場）"
+        required: false
+        default: "all"
+        type: string
+      MODE:
+        description: "predict or eval"
+        required: true
+        default: "predict"
+        type: choice
+        options: [predict, eval]
+      SIMS:
+        description: "試行回数/レース"
+        required: true
+        default: "600"
+        type: string
+      TOPN:
+        description: "三連単 TOPN"
+        required: true
+        default: "18"
+        type: string
+      UNIT:
+        description: "1点あたり(円)"
+        required: true
+        default: "100"
+        type: string
+      FILTERS:
+        description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19"
+        required: false
+        default: ""
+        type: string
+      KEYMAN:
+        description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
+        required: false
+        default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
+        type: string
+      OUTDIR:
+        description: "出力ディレクトリ"
+        required: false
+        default: "scripts/sims"
+        type: string
 
 permissions:
   contents: write
@@ -37,8 +73,6 @@ jobs:
           set -e
           python -m pip install --upgrade pip
           pip install numpy pandas joblib scikit-learn
-          sudo apt-get update -y
-          sudo apt-get install -y jq
 
       - name: Parse FILTERS & KEYMAN
         id: parse
@@ -47,8 +81,6 @@ jobs:
           KEYMAN:  ${{ inputs.KEYMAN }}
         run: |
           set -euo pipefail
-
-          # ★ util: kv を GITHUB_OUTPUT に吐く
           parse_kvlist () {
             local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
@@ -58,12 +90,11 @@ jobs:
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
                 v="$(echo "${kv#*=}" | xargs)"
-                echo "$prefix$k=$v" >> "$GITHUB_OUTPUT"
+                echo "${prefix}${k}=${v}" >> "$GITHUB_OUTPUT"
               fi
             done
           }
-
-          # 既定値（先に入れて、後で上書き）
+          # FILTERS defaults
           {
             echo "F_REQUIRE_ODDS=false"
             echo "F_MIN_EV=0"
@@ -74,31 +105,16 @@ jobs:
             echo "F_ONLY_FIRST1=false"
             echo "F_BUY_IN_TOP3=false"
             echo "F_BUY_THR=0.7"
-
+          } >> "$GITHUB_OUTPUT"
+          # KEYMAN defaults
+          {
             echo "K_ENABLE=true"
-            echo "K_THR=1.0"
+            echo "K_THR=0.7"
             echo "K_BOOST=0.15"
             echo "K_AGGR=0.0"
           } >> "$GITHUB_OUTPUT"
-
-          # ★ 入力で上書き（ここが“デフォ固定”の原因になりやすいので順序厳守）
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
-
-      # ★ 解析ログ（デバッグ用・最小変更）
-      - name: Dump parsed values
-        run: |
-          echo "K_ENABLE=${{ steps.parse.outputs.K_ENABLE }}"
-          echo "K_THR=${{ steps.parse.outputs.K_THR }}"
-          echo "K_BOOST=${{ steps.parse.outputs.K_BOOST }}"
-          echo "K_AGGR=${{ steps.parse.outputs.K_AGGR }}"
-          echo "F_REQUIRE_ODDS=${{ steps.parse.outputs.F_REQUIRE_ODDS }}"
-          echo "F_MIN_EV=${{ steps.parse.outputs.F_MIN_EV }}"
-          echo "F_ODDS_BANDS=${{ steps.parse.outputs.F_ODDS_BANDS }}"
-          echo "F_EXCLUDE_FIRST1=${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}"
-          echo "F_ONLY_FIRST1=${{ steps.parse.outputs.F_ONLY_FIRST1 }}"
-          echo "F_BUY_IN_TOP3=${{ steps.parse.outputs.F_BUY_IN_TOP3 }}"
-          echo "F_BUY_THR=${{ steps.parse.outputs.F_BUY_THR }}"
 
       - name: Normalize PID (all/空→01..24, カンマ区切り整形)
         id: pidnorm
@@ -122,8 +138,9 @@ jobs:
             PID_EXP="${OUT%,}"
           fi
           echo "PID_EXP=$PID_EXP" | tee -a "$GITHUB_OUTPUT"
+          echo "[pidnorm] => $PID_EXP"
 
-      # 1) Pass1
+      # 1) Pass1: キーマン抽出（predict-only）
       - name: Run Pass1 (keyman only)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -133,6 +150,7 @@ jobs:
           OUTDIR: ${{ inputs.OUTDIR }}
         run: |
           set -euo pipefail
+          echo "[pass1] DATE=$DATE PID=$PID"
           python scripts/sims/sims.py \
             --base public \
             --dates "$DATE" \
@@ -142,7 +160,7 @@ jobs:
             --predict-only \
             --outdir "$OUTDIR"
 
-      # 2) TENKAI (per PID)
+      # 2) ML推論（TENKAI）— PIDごと
       - name: Run TENKAI prediction
         env:
           DATE: ${{ inputs.DATE }}
@@ -150,9 +168,11 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p "TENKAI/predictions/v1/$DATE"
+          echo "[tenkai] $DATE / $PID_EXP"
           IFS=',' read -r -a PIDS <<< "$PID_EXP"
           for P in "${PIDS[@]}"; do
             P="$(echo "$P" | xargs)"; [ -z "$P" ] && continue
+            echo "  -> pid=$P"
             python TENKAI/tenkai_predict_integrated.py --date "$DATE" --pid "$P"
           done
 
@@ -160,7 +180,7 @@ jobs:
         run: |
           find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 4 -type f -name '*.csv' | sort || true
 
-      # 3) Pass2
+      # 3) Pass2: MLを読み込んだ統合SimS
       - name: Run Pass2 (SimS integrated with ML)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -168,6 +188,7 @@ jobs:
           MODE:  ${{ inputs.MODE }}
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
+          UNIT:  ${{ inputs.UNIT }}
           OUTDIR: ${{ inputs.OUTDIR }}
           # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
@@ -186,17 +207,19 @@ jobs:
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
+          echo "[pass2] MODE=$MODE DATE=$DATE PID=$PID"
           if [[ "${K_ENABLE,,}" == "false" ]]; then
             K_THR=9.9; K_BOOST=0; K_AGGR=0
           fi
           ARGS_COMMON="--base public --dates $DATE --pids $PID \
-            --sims $SIMS --topn $TOPN \
+            --sims $SIMS --topn $TOPN --unit $UNIT \
             --keyman-threshold $K_THR --keyman-boost $K_BOOST --keyman-aggr $K_AGGR \
             --ml-root TENKAI/predictions/v1 \
             --outdir $OUTDIR"
           [[ "${F_EXCLUDE_FIRST1,,}" == "true" ]] && ARGS_COMMON="$ARGS_COMMON --exclude-first1"
           [[ "${F_ONLY_FIRST1,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --only-first1"
           [[ "${F_BUY_IN_TOP3,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $F_BUY_THR"
+
           if [[ "$MODE" == "predict" ]]; then
             python scripts/sims/sims_integrated.py $ARGS_COMMON --predict-only
           else
@@ -209,7 +232,7 @@ jobs:
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON --odds-base public/odds/v1 $ARGS_FILTER
           fi
 
-      # 4) overall.json を毎回上書き（★ ヘッダ名で列特定して hit_rate の取り違えを防止）
+      # 4) 集計：常に実行し、overall.json を毎回上書き（CSVが無い場合はゼロ埋め）
       - name: Aggregate & write overall.json (overwrite always)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -236,99 +259,73 @@ jobs:
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          CSV="$OUTDIR/pass2/per_race_results.csv"
-          mkdir -p "$OUTDIR/pass2"
+          python - <<'PYCODE'
+import csv, json, os, pathlib
 
-          # デフォルト
-          RACES=0; BETS=0; STAKE=0; PAYOUT=0; HITS=0
+OUTDIR = os.environ.get("OUTDIR", "scripts/sims")
+CSV = pathlib.Path(OUTDIR) / "pass2" / "per_race_results.csv"
 
-          if [ -f "$CSV" ]; then
-            # ★ 先頭行から列番号を名前で取得（bets, hit, payout）
-            header="$(head -n1 "$CSV")"
-            IFS=',' read -r -a cols <<< "$header"
-            idx_of () { # 1-based
-              local name="$1"; local i=1
-              for c in "${cols[@]}"; do
-                c="${c%$'\r'}"; c="$(echo "$c" | xargs)"
-                if [ "$c" = "$name" ]; then echo "$i"; return 0; fi
-                i=$((i+1))
-              done
-              echo 0
-            }
+races = bets_total = stake_total = payout_total = hits = 0
 
-            CI_BETS=$(idx_of "bets")
-            CI_HIT=$(idx_of "hit")
-            CI_PAYOUT=$(idx_of "payout")
+if CSV.exists():
+    with CSV.open(newline="") as fp:
+        reader = csv.DictReader(fp)
+        rows = list(reader)
+    races = len(rows)
+    # bets は各レースの "bets" 列合計（存在しなければ 0）
+    bets_total = sum(int(r.get("bets", 0) or 0) for r in rows)
+    stake_total = int(os.environ.get("UNIT","100")) * bets_total
+    payout_total = sum(int(r.get("payout", 0) or 0) for r in rows)
+    hits = sum(int(r.get("hit", 0) or 0) for r in rows)
 
-            # フォールバック（古いCSV互換）
-            [ "$CI_BETS" -eq 0 ] && CI_BETS=4
-            [ "$CI_HIT" -eq 0 ] && CI_HIT=5
-            [ "$CI_PAYOUT" -eq 0 ] && CI_PAYOUT=6
+unit = int(os.environ.get("UNIT","100"))
+hit_rate = (hits / races) if races else 0.0
+roi = ((payout_total - stake_total) / stake_total) if stake_total else 0.0
 
-            RACES=$(($(wc -l < "$CSV")-1))
-            BETS=$(awk -F, -v b="$CI_BETS"   'NR>1{sum+=$b+0}END{print sum+0}' "$CSV")
-            HITS=$(awk -F, -v h="$CI_HIT"    'NR>1{sum+=$h+0}END{print sum+0}' "$CSV")
-            PAYOUT=$(awk -F, -v p="$CI_PAYOUT"'NR>1{sum+=$p+0}END{print sum+0}' "$CSV")
-            STAKE=$(( BETS * UNIT ))
-          else
-            echo "[overall] per_race_results.csv not found -> zero summary"
-          fi
+def tf(x): return str(x).strip().lower() == "true"
 
-          if [ "${RACES:-0}" -gt 0 ]; then
-            HIT_RATE=$(awk -v h="$HITS" -v r="$RACES" 'BEGIN{printf "%.12f", (r==0?0:h/r)}')
-          else
-            HIT_RATE=0
-          fi
-          if [ "${STAKE:-0}" -gt 0 ]; then
-            ROI=$(awk -v p="$PAYOUT" -v s="$STAKE" 'BEGIN{printf "%.12f", (s==0?0:(p-s)/s)}')
-          else
-            ROI=0
-          fi
+summary = {
+  "date": os.environ.get("DATE",""),
+  "mode": os.environ.get("MODE",""),
+  "pid": os.environ.get("PID",""),
+  "races": races,
+  "bets_total": bets_total,
+  "unit": unit,
+  "stake_total": stake_total,
+  "hits": hits,
+  "hit_rate": hit_rate,
+  "payout_total": payout_total,
+  "roi": roi,
+  "options": {
+    "sims": int(os.environ.get("SIMS","600")),
+    "topn": int(os.environ.get("TOPN","18")),
+    "filters": {
+      "require_odds": tf(os.environ.get("F_REQUIRE_ODDS","false")),
+      "min_ev": float(os.environ.get("F_MIN_EV","0") or 0),
+      "odds_bands": os.environ.get("F_ODDS_BANDS",""),
+      "odds_min": float(os.environ.get("F_ODDS_MIN","0") or 0),
+      "odds_max": float(os.environ.get("F_ODDS_MAX","0") or 0),
+      "exclude_first1": tf(os.environ.get("F_EXCLUDE_FIRST1","false")),
+      "only_first1": tf(os.environ.get("F_ONLY_FIRST1","false")),
+      "buy_in_top3": tf(os.environ.get("F_BUY_IN_TOP3","false")),
+      "buy_thr": float(os.environ.get("F_BUY_THR","0.7") or 0.7),
+    },
+    "keyman": {
+      "enable": tf(os.environ.get("K_ENABLE","true")),
+      "threshold": float(os.environ.get("K_THR","0.7") or 0.7),
+      "boost": float(os.environ.get("K_BOOST","0.15") or 0.15),
+      "aggr": float(os.environ.get("K_AGGR","0.0") or 0.0),
+      "buy_in_top3": tf(os.environ.get("F_BUY_IN_TOP3","false")),
+      "buy_thr": float(os.environ.get("F_BUY_THR","0.7") or 0.7),
+    }
+  }
+}
 
-          tf(){ v="${1:-false}"; v="$(echo "$v" | tr '[:upper:]' '[:lower:]')"; [ "$v" = "true" ] && echo true || echo false; }
-          REQ_ODDS=$(tf "$F_REQUIRE_ODDS")
-          EXC1=$(tf "$F_EXCLUDE_FIRST1")
-          ONLY1=$(tf "$F_ONLY_FIRST1")
-          BUY3=$(tf "$F_BUY_IN_TOP3")
-          KM_EN=$(tf "$K_ENABLE")
-
-          jq -n \
-            --arg date "$DATE" --arg mode "$MODE" --arg pid "$PID" \
-            --argjson unit $UNIT --argjson sims $SIMS --argjson topn $TOPN \
-            --argjson races ${RACES:-0} --argjson bets ${BETS:-0} \
-            --argjson stake ${STAKE:-0} --argjson hits ${HITS:-0} \
-            --argjson hit_rate ${HIT_RATE:-0} --argjson payout ${PAYOUT:-0} --argjson roi ${ROI:-0} \
-            --argjson f_require_odds $REQ_ODDS --arg f_odds_bands "${F_ODDS_BANDS:-}" \
-            --argjson f_min_ev ${F_MIN_EV:-0} --argjson f_odds_min ${F_ODDS_MIN:-0} --argjson f_odds_max ${F_ODDS_MAX:-0} \
-            --argjson f_exclude_first1 $EXC1 --argjson f_only_first1 $ONLY1 \
-            --argjson f_buy_in_top3 $BUY3 --argjson f_buy_thr ${F_BUY_THR:-0} \
-            --argjson k_enable $KM_EN --argjson k_thr ${K_THR:-0} --argjson k_boost ${K_BOOST:-0} --argjson k_aggr ${K_AGGR:-0} \
-            '{
-              date: $date, mode: $mode, pid: $pid,
-              races: $races, bets_total: $bets, unit: $unit,
-              stake_total: $stake, hits: $hits, hit_rate: $hit_rate,
-              payout_total: $payout, roi: $roi,
-              options: {
-                sims: $sims, topn: $topn,
-                filters: {
-                  require_odds: $f_require_odds,
-                  min_ev: $f_min_ev,
-                  odds_bands: $f_odds_bands,
-                  odds_min: $f_odds_min, odds_max: $f_odds_max,
-                  exclude_first1: $f_exclude_first1,
-                  only_first1: $f_only_first1,
-                  buy_in_top3: $f_buy_in_top3,
-                  buy_thr: $f_buy_thr
-                },
-                keyman: {
-                  enable: $k_enable, threshold: $k_thr,
-                  boost: $k_boost, aggr: $k_aggr,
-                  buy_in_top3: $f_buy_in_top3, buy_thr: $f_buy_thr
-                }
-              }
-            }' > "$OUTDIR/pass2/overall.json"
-
-          echo "[overall] wrote $OUTDIR/pass2/overall.json"
+out_path = pathlib.Path(OUTDIR) / "pass2" / "overall.json"
+out_path.parent.mkdir(parents=True, exist_ok=True)
+out_path.write_text(json.dumps(summary, ensure_ascii=False, indent=2))
+print(f"[overall] wrote {out_path}")
+PYCODE
 
       - name: Commit results into repo
         if: always()
